[gd_scene load_steps=17 format=3 uid="uid://pks0qdd1moi8"]

[ext_resource type="Script" path="res://src/LevelProps.gd" id="1_7ju0m"]
[ext_resource type="AudioStream" uid="uid://vx22wmjgsl50" path="res://assets/sounds/music/level_music/Dash (Mashup).wav" id="2_8grye"]
[ext_resource type="PackedScene" uid="uid://duj3dae6qcvtm" path="res://scenes/components/level_components/portals/gamemode_portals/SpiderPortal.tscn" id="3_reyso"]
[ext_resource type="PackedScene" uid="uid://ccdry45jmn43w" path="res://scenes/components/level_components/solids/DefaultCube.tscn" id="5_g4mtk"]
[ext_resource type="PackedScene" uid="uid://d0dk4786hlokq" path="res://scenes/components/level_components/orbs/BlueOrb.tscn" id="5_iahbh"]
[ext_resource type="PackedScene" uid="uid://cglxf6jw4fmi" path="res://scenes/components/level_components/orbs/RedOrb.tscn" id="6_altr0"]
[ext_resource type="PackedScene" uid="uid://qfmv2p1wt1tn" path="res://scenes/components/level_components/portals/gamemode_portals/CubePortal.tscn" id="7_xptki"]
[ext_resource type="PackedScene" uid="uid://nsvkooc5od83" path="res://scenes/components/level_components/pads/YellowPad.tscn" id="8_7c14y"]
[ext_resource type="Texture2D" uid="uid://cmcq4iubclsti" path="res://assets/textures/Cross.svg" id="9_q43de"]
[ext_resource type="Script" path="res://src/components/triggers/tCameraStatic.gd" id="10_uv5o3"]
[ext_resource type="PackedScene" uid="uid://l2ofoyvoxbr2" path="res://scenes/components/game_components/TargetLink.tscn" id="11_cwnn2"]
[ext_resource type="Script" path="res://src/components/triggers/trigger_components/tEasing.gd" id="14_ejfuf"]
[ext_resource type="Script" path="res://src/components/triggers/trigger_components/tBase.gd" id="15_0tprd"]
[ext_resource type="Script" path="res://src/components/triggers/tCameraZoom.gd" id="16_p1y5b"]
[ext_resource type="Script" path="res://src/components/triggers/tCameraRotate.gd" id="17_ga355"]
[ext_resource type="PackedScene" uid="uid://danxhobafrnci" path="res://scenes/components/level_components/orbs/GreenOrb.tscn" id="18_cjq8q"]

[node name="Dash V2" type="Node2D"]
script = ExtResource("1_7ju0m")
song = ExtResource("2_8grye")
metadata/_edit_lock_ = true

[node name="RedOrb" parent="." instance=ExtResource("6_altr0")]
position = Vector2(1472, -320)

[node name="BLOCKS" type="Node2D" parent="."]
position = Vector2(256, 0)
metadata/_edit_group_ = true

[node name="DefaultCube" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(1793, -448)

[node name="DefaultCube33" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(1856, -64)

[node name="DefaultCube34" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(2368, -64)

[node name="DefaultCube35" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(2880, -64)

[node name="DefaultCube2" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(1921, -448)

[node name="DefaultCube3" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(2305, -576)

[node name="DefaultCube4" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(2433, -576)

[node name="DefaultCube5" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(2817, -320)

[node name="DefaultCube6" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(2945, -320)

[node name="DefaultCube7" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(3776, -448)

[node name="DefaultCube8" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(3904, -448)

[node name="DefaultCube9" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4032, -448)

[node name="DefaultCube10" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4032, -1216)

[node name="DefaultCube11" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4160, -1216)

[node name="DefaultCube12" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4288, -1216)

[node name="DefaultCube25" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5440, -1216)

[node name="DefaultCube26" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5568, -1216)

[node name="DefaultCube27" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5696, -1216)

[node name="DefaultCube28" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5696, -704)

[node name="DefaultCube29" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5824, -704)

[node name="DefaultCube30" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5952, -704)

[node name="DefaultCube13" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4288, -704)

[node name="DefaultCube16" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4672, -704)

[node name="DefaultCube14" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4416, -704)

[node name="DefaultCube15" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4544, -704)

[node name="DefaultCube17" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4672, -1216)

[node name="DefaultCube18" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5056, -1216)

[node name="DefaultCube19" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4800, -1216)

[node name="DefaultCube20" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(4928, -1216)

[node name="DefaultCube21" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5056, -448)

[node name="DefaultCube22" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5440, -448)

[node name="DefaultCube31" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(6080, -704)

[node name="DefaultCube32" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(6208, -704)

[node name="DefaultCube23" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5184, -448)

[node name="DefaultCube24" parent="BLOCKS" instance=ExtResource("5_g4mtk")]
position = Vector2(5312, -448)

[node name="BlueOrb" parent="." instance=ExtResource("5_iahbh")]
position = Vector2(3520, -704)

[node name="BlueOrb2" parent="." instance=ExtResource("5_iahbh")]
position = Vector2(3776, -1216)

[node name="SpiderPortal" parent="." instance=ExtResource("3_reyso")]
position = Vector2(4032, -704)

[node name="CubePortal" parent="." instance=ExtResource("7_xptki")]
position = Vector2(6464, -960)

[node name="YellowPad" parent="." instance=ExtResource("8_7c14y")]
position = Vector2(6464, -832)

[node name="Cross" type="Sprite2D" parent="."]
position = Vector2(5184, -896)
scale = Vector2(0.125, 0.125)
texture = ExtResource("9_q43de")

[node name="tCameraStatic" type="Node2D" parent="."]
position = Vector2(3520, -1600)
script = ExtResource("10_uv5o3")
metadata/_edit_group_ = true

[node name="TargetLink" parent="tCameraStatic" instance=ExtResource("11_cwnn2")]
z_index = -50

[node name="tEasing" type="Node" parent="tCameraStatic"]
script = ExtResource("14_ejfuf")
_easing_transition = 1

[node name="tBase" type="Area2D" parent="tCameraStatic" node_paths=PackedStringArray("_target")]
collision_layer = 16
script = ExtResource("15_0tprd")
_target = NodePath("../../Cross")

[node name="tCameraStatic2" type="Node2D" parent="."]
position = Vector2(6208, -1600)
script = ExtResource("10_uv5o3")
mode = 1
metadata/_edit_group_ = true

[node name="TargetLink" parent="tCameraStatic2" instance=ExtResource("11_cwnn2")]
z_index = -50

[node name="tEasing" type="Node" parent="tCameraStatic2"]
script = ExtResource("14_ejfuf")
_easing_transition = 1

[node name="tBase" type="Area2D" parent="tCameraStatic2" node_paths=PackedStringArray("_target")]
collision_layer = 16
script = ExtResource("15_0tprd")
_target = NodePath("../../Cross")

[node name="tCameraZoom" type="Node2D" parent="."]
position = Vector2(320, -1472)
script = ExtResource("16_p1y5b")
_set_zoom = Vector2(0.75, 0.75)
metadata/_edit_group_ = true

[node name="tEasing" type="Node" parent="tCameraZoom"]
script = ExtResource("14_ejfuf")
_duration = 2.0
_easing_transition = 1

[node name="tBase" type="Area2D" parent="tCameraZoom"]
collision_layer = 16
script = ExtResource("15_0tprd")

[node name="tCameraRotate" type="Node2D" parent="."]
position = Vector2(4288, -1472)
script = ExtResource("17_ga355")
_set_rotation_degrees = 5.0
metadata/_edit_group_ = true

[node name="tEasing" type="Node" parent="tCameraRotate"]
script = ExtResource("14_ejfuf")
_easing_type = 1
_easing_transition = 5

[node name="tBase" type="Area2D" parent="tCameraRotate"]
collision_layer = 16
script = ExtResource("15_0tprd")

[node name="tCameraRotate3" type="Node2D" parent="."]
position = Vector2(4928, -1472)
script = ExtResource("17_ga355")
_set_rotation_degrees = -5.0
metadata/_edit_group_ = true

[node name="tEasing" type="Node" parent="tCameraRotate3"]
script = ExtResource("14_ejfuf")
_easing_type = 1
_easing_transition = 5

[node name="tBase" type="Area2D" parent="tCameraRotate3"]
collision_layer = 16
script = ExtResource("15_0tprd")

[node name="tCameraRotate4" type="Node2D" parent="."]
position = Vector2(5568, -1472)
script = ExtResource("17_ga355")
_set_rotation_degrees = 5.0
metadata/_edit_group_ = true

[node name="tEasing" type="Node" parent="tCameraRotate4"]
script = ExtResource("14_ejfuf")
_easing_type = 1
_easing_transition = 5

[node name="tBase" type="Area2D" parent="tCameraRotate4"]
collision_layer = 16
script = ExtResource("15_0tprd")

[node name="tCameraRotate2" type="Node2D" parent="."]
position = Vector2(6208, -1472)
script = ExtResource("17_ga355")
metadata/_edit_group_ = true

[node name="tEasing" type="Node" parent="tCameraRotate2"]
script = ExtResource("14_ejfuf")
_easing_type = 1
_easing_transition = 5

[node name="tBase" type="Area2D" parent="tCameraRotate2"]
collision_layer = 16
script = ExtResource("15_0tprd")

[node name="GreenOrb" parent="." instance=ExtResource("18_cjq8q")]
position = Vector2(6848, -1024)

[node name="BlueOrb3" parent="." instance=ExtResource("5_iahbh")]
position = Vector2(7360, -1152)
